# uk-fvcom

./: .gitignore  CMakeLists.txt  FABM_changelog.txt  FVCOM-restart-flow.docx  FVCOM-restart-flow.odt  LICENSE  README.md  bcond_gcn.F  bcond_gcy.F  brough.F  changelog  changelog.txt  changes_from_before  chen_mod_veg.F  fvcom.F  ice_constants.F  ice_flux_in.F  ice_mechred.F  ice_ocean.F  ice_state.F  ice_therm_vertical.F  internal_step.F  maintained_diff.txt  make.inc  make.inc_example  make.inc~  makedepends  makefile  mod_action_ex.F  mod_assim.F  mod_bbl.F  mod_bio_3D.F  mod_clock.F  mod_fabm_3D.F  mod_fabm_3D_ge_sediment.F  mod_force.F  mod_gotm.F  mod_heatflux.F  mod_heatflux_gl.F  mod_ice.F  (+28 more)
Configure/: configure.sh  readme_configure
Configure/arch/: AIX_i686_cc_xlf90  AIX_x86_64_cc_mpxlf90  Darwin_x86_64_cc_f90  Linux_i686_cc_pgf90  Linux_i686_icc_ifort  Linux_x86_64_cc_gfortran  Linux_x86_64_mpicc_mpif90  OSF1_x86_64_cc_f90  make.inc_afteramble  make.inc_preamble
Doc/: 4.2vs4.1  GLERL_FVCOM_v32_updates-Ice.docx  comparison40vs32.docx  comparison41vs40.docx  comparison42vs41.docx  comparison43vs42.docx  comparison442vs44.docx  comparison44vs43.docx  note_4.0to4.1
FVCOM_offlines/CE-QUAL-ICM/Progress_in_Linkage_of_FVCOM_and_CE-QUAL-ICM.PNNL/: Progress in FVCOM and CE-Qual ICM Linkage.PNNL.TK01.docx
FVCOM_offlines/CE-QUAL-ICM/Progress_in_Linkage_of_FVCOM_and_CE-QUAL-ICM.PNNL/CODE/: PON.out  adv_wqm.F  bcmap.F  bcond_wqm.F  bcs_force.F  bracket.F  cell_area.F  domdec.F  fct_nut.F  genmap.F  hydro.F  kbm1.out  makedepends  makefile  mod_ncd.F  mod_obcs.F  mod_par.F  mod_prec.F  mod_types.F  (+22 more)
FVCOM_offlines/LAG/: horizontal random_walk.docx
FVCOM_offlines/LAG/LAG_source_new/: makedepends  makefile
FVCOM_offlines/UG-GEM/code/: adjust_bio.F  alloc_vars.F  archive.F  bcmap.F  bcs_force.F  bracket.F  cell_area.F  closefiles.F  data_run.F  domdec.F  fct_bio.F  fvcom_gem.F  genmap.F  getbdno.F  iofiles.F  makedepends  makefile  mod_bio_3D.F  mod_bio_obc.F  mod_clock.F  mod_inp.F  mod_main.F  mod_ncdin.F  mod_ncdout.F  mod_northpole.F  mod_obcs.F  mod_onedtide.F  mod_par.F  mod_prec.F  mod_probe.F  mod_spherical.F  mod_tsobc.F  mod_types.F  ncdio.F  pdomdec.F  print_vals.F  report.F  sinter.F  startup.F  tge.F  (+4 more)
FVCOM_offlines/UG-GEM/run/: bio_model.in  bio_model_new.in  inlet_0001.nc.REMOVED.git-id
FVCOM_offlines/UG-RCA/code/: Constant_Tian  allocate_rca.F  allocate_sed.F  cell_area.F  domdec.F  eutro.F  fct_s.F  mod_par.F  mod_rca.F  mod_utils.F  pdomdec.F  print_vals.F  rca.F  rca01.F  rca02.F  rca05.F  rca07.F  rca09.F  rca11.F  rcaadv.F  rcadwrit.F  rcamprof.F  rcaprnt.F  sedmodlsubs.F  tge.F  vertvl.F  vssedmodl.F
FVCOM_offlines/UG-RCA/code_new/: Makefile  RCA copyright.txt  eutro.F  fmter.F  genmap.F  iunitcheck.F  makedepends  mod_ncd.F  mod_par.F  mod_prec.F  mod_rca.F  mod_sed.F  mod_types.F  mod_var.F  ncdio.F  rca.F  rca03.F  rca04.F  rca06.F  rca07.F  rca08.F  rca10.F  rca12.F  rca13.F  rcaadv.F  rcabyss.F  rcamess.F  sinter.F  stoich.F  tge.F  utilities.F  vdif.F  viscofh.F  vssedmodl.F
FVCOM_offlines/UG-RCA/run_2008/: mbfull3_fvcom.inp2006  model_fvcom_pcv.2008  runscript_dualproc_rca
FVCOM_source/: CMakeLists.txt  LICENCE  adjust_ts.F  adv_s.F  adv_t.F  adv_uv_edge_gcn.F  advave_edge_gcn.F  baropg.F  bcond_gcn.F  bcond_gcy.F  brough.F  cell_area.F  cntrl_prmtrs.F  coare26z.F  coare40vn.F  coords_n_const.F  eqs_of_state.F  extel_edge.F  external_step.F  extuv_edge.F  fct_s.F  fct_t.F  func_pointer.c  fvcom.F  grid_metrics.F  ice_albedo.F  ice_calendar.F  ice_coupling.F  ice_flux.F  ice_flux_in.F  ice_grid.F  ice_init.F  ice_itd.F  ice_mechred.F  ice_ocean.F  ice_therm_itd.F  ice_therm_vertical.F  init_sed.F  internal_step.F  make.inc  (+121 more)
FVCOM_source/BIO_source/: bacteria.F  bio_mixing.F  detritus.F  get_parameter.F  makefile  mod_1D.F  mod_detritus.F  mod_phytoplankton.F  nutrient.F  phytoplankton.F  zooplankton.F
FVCOM_source/BIO_source/CVS/: Entries  Repository
FVCOM_source/CVS/: Entries
FVCOM_source/FABM_source/: mod_fabm_data.F
FVCOM_source/input/init_file/: tst_init.nml
FVCOM_source/input/surface_forcing/: yangze_force_spring.nml
FVCOM_source/input/surface_forcing/CVS/: Entries
FVCOM_source/input/surface_forcing/wrf2fvcom/: main.F  mod_wrf2grd.F
FVCOM_source/input/surface_forcing/wrf_bulk_formula/: README.md  get_libs.sh  makefile  makefile.ARCHER  makefile.GFORTRAN  wrf_to_fvcom.f90
FVCOM_source/input/surface_forcing/wrf_bulk_formula/CVS/: Tag
FVCOM_source/input/ts_assim_julian/: GLB_ts.nml  N1D_ts.nml  runscript
FVCOM_source/libs/: makefile  makefile.ARCHER  makefile.CETO  makefile.desktop  makefileG  patch-fproj.sh  patch-julian.sh  patch-metis.sh
GOTM_inputs/: gotmturb.inp_KE  gotmturb.inp_MY2.5
GOTM_source/: configure.sh  readme
cmake/: FindNetCDF.cmake
cmake/Modules/: FindMPI.cmake  FindNetCDF.cmake
input/init_file/: main.F
input/surface_forcing/: glbwnd.nml  main.F  makefile  mod_binary.F  mod_output.F  mod_surfaceforce.F  yangze_force.nml  yangze_force.nml~  yangze_force_autumn.nml
input/surface_forcing/CVS/: Entries  Repository
input/surface_forcing/wrf_bulk_formula/: convert.sh  makefile  wrf_to_fvcom.f90
input/ts_assim_julian/: ARC_ts.nml  main.F  mod_ts_clim.mod
input/ts_assim_julian/CVS/: Entries
input/ts_assim_julian2/: N1D_ts.nml  mod_ts_clim.mod
input/ts_assim_julian2/CVS/: Root
libs/: makefile  makefile.ARCHER
src/: .gitignore  RELEASE_NOTES  adv_s_rk.F  advave_edge_gcn.F  allocate_all.F  bcond_gcy.F  brough.F  cntrl_prmtrs.F  coare26z.F  coare40vn.F  extuv_edge.F  fvcom.F  make_PML_ARCHER.inc  make_ROSA_ceto_aqua_v14_assim_offline_debug.inc  make_lakeErie.inc  make_lymebay_ceto_nonMPDATA_GOTM.inc  make_lymebay_ceto_nonMPDATA_VEC_GE_prof.inc  make_lymebay_ceto_nonMPDATA_VEC__OLDSED_prof.inc  makedepends  makefile  mod_bio_3D.F  mod_dye.F  mod_fabm_3D.F  mod_fabm_3D.FgFortran  mod_force.F  mod_heatflux_icbm.F  mod_input.F  mod_main.F  mod_main.F90  mod_ncdio.F  mod_nctools.F  mod_nesting.F  mod_obcs.F  mod_probe.F  mod_report.F  mod_scal.F  mod_sed.F  mod_setup.F  mod_tvd.F  mod_types.F  (+6 more)
(+41 files in other folders)
